--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								<p>Here, I performed extensive data cleaning and data wrangling tasks using Pandas. Did Exploratory Data Analysis using Matplolib and Seaborn to create charts and analyze the data in a Jupyter Notebook.
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://public.tableau.com/app/profile/anitya.gangurde/viz/WorldwideCO2emissions_16402503766470/Story"><img src="images/thumbs/CO2.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<a href="https://github.com/AnityaGan9urde/Census-2011-Analysis"><img src="images/thumbs/census.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Census-2011 Analysis</h3>
 								<span class="label tag shadow">MySql</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
 								<p>This project involves an analysis using <b>SQL</b> and <b>MS-Excel</b> on Census data of India for the year 2011.</p>
