--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
 						<h2>Certifications</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<img id="myImg" src="images/certs/sql_i.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(6)" />
+								<a href="https://www.hackerrank.com/certificates/1b00188d4baa"><h3>SQL(Intermediate)</h3></a>
+								<p>Skill verification certificate from HackerRank.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<img src="images/certs/02gans.jpg" class="image fit thumb zoom hover-shadow cursor" alt="PyTorch" onclick="openModal();currentSlide(1)" />
 								<a href="https://jovian.ai/certificate/MFQTKMZUGE"><h3>Deep Learning with Pytorch: Zero to GANs</h3></a>
 								<p>Certification for Deep Learning course using PyTorch framework with practical assignments and course projects.</p>
@@ -250,12 +255,12 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img id="myImg" src="images/certs/py.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(5)" />
 								<a href="https://www.hackerrank.com/certificates/c42384242efe"><h3>Python(Basics)</h3></a>
-								<p>Test certificate from HackerRank.</p>
+								<p>Skill verification certificate from HackerRank.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img id="myImg" src="images/certs/sql.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(6)" />
 								<a href="https://www.hackerrank.com/certificates/6bacf2a99123"><h3>SQL(Basics)</h3></a>
-								<p>Test certificate from HackerRank.</p>
+								<p>Skill verification certificate from HackerRank.</p>
 							</article>
 						</div>
 						<div id="myModal" class="modal">
