--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://public.tableau.com/app/profile/anitya.gangurde/viz/Covid-Dashboard_16408930437180/Story1"><img src="images/thumbs/covid.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
-								<h3>Covid-19 Dashboard</h3>
+								<h3>Covid-19 Dashboard <a href="https://www.github.com/anityagan9urde/" class="icon brands fa-github"><span class="label">Github</span></a></h3>
 								<span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
 								<p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
 							</article>
