--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
 						<h2>Data Analysis Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://public.tableau.com/app/profile/anitya.gangurde/viz/Covid-Dashboard_16408930437180/Story1"><img src="images/thumbs/covid.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
-								<h3>Covid-19 Dashboard              <a href="https://www.github.com/anityagan9urde/" class="icon brands fa-github"><span class="label">Github</span></a></h3>
-								<span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
+								<a href="https://github.com/AnityaGan9urde/Covid-19-Analysis"><img src="images/thumbs/covid.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>Covid-19 Analysis</h3>
+								<span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
 								<p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://public.tableau.com/app/profile/anitya.gangurde/viz/WorldwideCO2emissions_16402503766470/Story"><img src="images/thumbs/CO2.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
-								<h3>CO2 emissions Tableau Story</h3>
-								<span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
+								<a href="https://github.com/AnityaGan9urde/CO2-Emissions-Analysis"><img src="images/thumbs/CO2.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+								<h3>CO2 emissions all around the world</h3>
+								<span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
 								<p>This project involves an analysis on World CO2 emissions from 1960 to 2011.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -147,7 +147,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/AnityaGan9urde/Census-2011-Analysis"><img src="images/thumbs/census.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
 								<h3>Census-2011 Analysis</h3>
-								<span class="label tag shadow">MySql</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">Visualization</span><br><br>
+								<span class="label tag shadow">MySQL</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">DashBoard</span><br><br>
 								<p>This project involves an analysis using <b>SQL</b> and <b>MS-Excel</b> on Census data of India for the year 2011.</p>
 							</article>
 						</div>
