--- a/index.html
+++ b/index.html
@@ -23,6 +23,38 @@
 		</style>
 	</head>
 	<body class="is-preload">
+		<nav class="navbar navbar-default navbar-fixed-top navbar-custom">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		      </button><a class="navbar-brand" href="https://ry05.github.io/">Ramshankar Yadhunath</a></div>
+
+		    <div class="collapse navbar-collapse" id="main-navbar">
+		      <ul class="nav navbar-nav navbar-right">
+			  <li><a href="/projects">Projects</a></li>
+			  <li><a href="/publications">Publications</a></li>
+			  <li><a href="/blog">Blog</a></li>
+			  <li><a href="/misc">Community</a></li>
+			  <li><a href="/66dod">66DaysofData</a></li>
+			  <li><a href="/notes">Notes</a></li></ul>
+		    </div>
+
+
+			<div class="avatar-container" style="display: block;">
+			  <div class="avatar-img-border">
+			    <a href="https://ry05.github.io/">
+			      <img class="avatar-img" src="/img/face-icon.png">
+				</a>
+			  </div>
+			</div>
+
+
+		  </div>
+		</nav>
 
 		<!-- Header -->
 			<header id="header">
