--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top navbar-custom">
 		  <div class="container-fluid">
 		    <div class="collapse navbar-collapse" id="main-navbar">
-		      <ul class="nav navbar-nav navbar-right">
-			  <li><a href="/badges">Badges </a></li>
-			  <li><a href="/anprojects">Analysis Projects</a></li>
-			  <li><a href="/mlprojects">ML Projects</a></li>
-			  <li><a href="/blogs">Blogs</a></li>
-			  <li><a href="/certs">Certifications</a></li>
-			  <li><a href="/contact">Contact</a></li>
+		      
 		    </div>
 		  </div>
 		</nav>
@@ -51,6 +45,18 @@
 
 			<div id="main">
 				<!-- One -->
+					<section>
+						<header class="major">
+							<ul class="nav navbar-nav navbar-right">
+							  <li><a href="/badges">Badges </a></li>
+							  <li><a href="/anprojects">Analysis Projects</a></li>
+							  <li><a href="/mlprojects">ML Projects</a></li>
+							  <li><a href="/blogs">Blogs</a></li>
+							  <li><a href="/certs">Certifications</a></li>
+							  <li><a href="/contact">Contact</a></li>
+							</ul>
+						</header>
+					</section>
 					<section id="one">
 						<header class="major">
 							<h2>Welcome to my portfolio website where you can find all my recent projects and certifications.</h2>
