--- a/index.html
+++ b/index.html
@@ -34,27 +34,17 @@
 			</header>
 
 		<!-- Main -->
-		<nav class="navbar navbar-default navbar-fixed-top navbar-custom">
-		  <div class="container-fluid">
-		    <div class="collapse navbar-collapse" id="main-navbar">
-		      
-		    </div>
-		  </div>
-		</nav>
-
 
 			<div id="main">
 				<!-- One -->
 					<section>
 						<header class="major">
-							<ul class="nav navbar-nav navbar-right">
-							  <li><a href="/badges">Badges </a></li>
-							  <li><a href="/anprojects">Analysis Projects</a></li>
-							  <li><a href="/mlprojects">ML Projects</a></li>
-							  <li><a href="/blogs">Blogs</a></li>
-							  <li><a href="/certs">Certifications</a></li>
-							  <li><a href="/contact">Contact</a></li>
-							</ul>
+						  <h2><a href="/badges">Badges </a></h2>
+						  <h2><a href="/anprojects">Analysis Projects</a></h2>
+						  <h2><a href="/mlprojects">ML Projects</a></h2>
+						  <h2><a href="/blogs">Blogs</a></h2>
+						  <h2><a href="/certs">Certifications</a></h2>
+						  <h2><a href="/contact">Contact</a></h2>
 						</header>
 					</section>
 					<section id="one">
