--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div id="main">
 				<!-- One -->
 					<section>
-						<header class="major">
+						<header>
 						  <h2><a href="/badges">Badges </a></h2>
 						  <h2><a href="/anprojects">Analysis Projects</a></h2>
 						  <h2><a href="/mlprojects">ML Projects</a></h2>
