--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			<div id="main">
 				<!-- One -->
-					<section>
+					<!-- <section id="navbar">
 						<header>
 						  <h2><a href="/badges">Badges </a></h2>
 						  <h2><a href="/anprojects">Analysis Projects</a></h2>
@@ -47,6 +47,7 @@
 						  <h2><a href="/contact">Contact</a></h2>
 						</header>
 					</section>
+					-->
 					<section id="one">
 						<header class="major">
 							<h2>Welcome to my portfolio website where you can find all my recent projects and certifications.</h2>
