--- a/analytics.html
+++ b/analytics.html
@@ -73,6 +73,12 @@
                                 <span class="label tag shadow">MySQL</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">DashBoard</span><br><br>
                                 <p>This project involves an analysis using <b>SQL</b> and <b>MS-Excel</b> on Census data of India for the year 2011.</p>
                             </article>
+                            <article class="col-6 col-12-xsmall work-item">
+                                <a href="https://github.com/AnityaGan9urde/g20-countries-analysis"><img src="images/thumbs/g20.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+                                <h3>G20 Countries Analysis</h3>
+                                <span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
+                                <p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
+                            </article>
                         </div>
                     </section>
                 </div>
