--- a/aiml.html
+++ b/aiml.html
@@ -42,7 +42,7 @@
                                 <a href="https://news-segmentation.herokuapp.com/"><img src="images/thumbs/newstm.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
                                 <h3>NEWS Article Segmentation</h3>
                                 <span class="label tag shadow">NLP</span><span class="label tag shadow">Flask</span><span class="label tag shadow">Python</span><span class="label deployed shadow">Deployed</span><br><br>
-                                <p>This is an NLP project which I'm doing under the INeuron Internship. This is still a work in progress and close to finishing.</p>
+                                <p>This is an NLP project which classifies the news topics based on the user input(i.e. a news article in English). This is still a work in progress and close to finishing.</p>
                             </article>
                             <article class="col-6 col-12-xsmall work-item">
                                 <a href="https://github.com/AnityaGan9urde/Guitar-chord-detection"><img src="images/thumbs/guitar.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
