--- a/aiml.html
+++ b/aiml.html
@@ -18,7 +18,6 @@
                     <img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
                     <h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
                     with interests in GANs and NLPs.</h1><br>
-                    <a href="Anitya_Gangurde_Resume.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
                 </div>
             </header>
 
@@ -83,6 +82,7 @@
                                 <span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label deployed shadow">Deployed</span><br><br>
                                 <p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
                             </article>
+                            <a href="Anitya_Gangurde_Resume_ml.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
                         </div>
 
         <!-- Footer -->
