--- a/aiml.html
+++ b/aiml.html
@@ -82,8 +82,11 @@
                                 <span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label deployed shadow">Deployed</span><br><br>
                                 <p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
                             </article>
+                        </div>
+                        <div>
                             <a href="Anitya_Gangurde_Resume_ml.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
                         </div>
+
 
         <!-- Footer -->
             <footer id="footer">
