--- a/analytics.html
+++ b/analytics.html
@@ -29,7 +29,6 @@
                     <img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
                     <h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
                     with interests in GANs and NLPs.</h1><br>
-                    <a href="Anitya_Gangurde_Resume.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
                 </div>
             </header>
 
@@ -79,6 +78,9 @@
                                 <span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
                                 <p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
                             </article>
+                        </div>
+                        <div>
+                            <a href="Anitya_Gangurde_Resume_da.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
                         </div>
                     </section>
                 </div>
