--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
-        <style>
-        #modal {
-           position: absolute;
-           z-index: 99;
-           top: 25%;
-           width: 400px;
-           height: 300px;
-           margin: auto;
-           display: none;
-        }
-        </style>
     </head>
     <body class="is-preload">
         <!-- Header -->
@@ -29,7 +18,6 @@
                     <img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
                     <h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
                     with interests in GANs and NLPs.</h1><br>
-                    <a href="Anitya_Gangurde_Resume.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
                 </div>
             </header>
 
@@ -46,7 +34,7 @@
                         <a class="active" href="contact.html">Contact</a>
                     </div>
 
-                    <section id="five">
+                    <section>
                         <h2>Get In Touch</h2>
                         <div class="row">
                             <div>
