--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html"><img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
-					with interests in GANs and NLPs.</h1><br>
+					<h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a ML Enthusiast<br />
+					with interest in data analysis and developing ML/DL models.</h1><br>
 					<a href="Anitya_Gangurde_Resume.pdf" class="button button-shadow button-zoom" download>Download Resume</a>
 				</div>
 			</header>
