--- a/blogs.html
+++ b/blogs.html
@@ -10,25 +10,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
-        <style>
-        #modal {
-           position: absolute;
-           z-index: 99;
-           top: 25%;
-           width: 400px;
-           height: 300px;
-           margin: auto;
-           display: none;
-        }
-        </style>
     </head>
     <body class="is-preload">
         <!-- Header -->
             <header id="header">
                 <div class="inner">
                     <img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
-                    <h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
-                    with interests in GANs and NLPs.</h1><br>
+                    <h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a ML Enthusiast<br />
+					with interest in data analysis and developing ML/DL models.</h1><br>
                 </div>
             </header>
 
