--- a/aiml.html
+++ b/aiml.html
@@ -16,8 +16,7 @@
             <header id="header">
                 <div class="inner">
                     <img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
-                    <h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a Deep Learning Enthusiast<br />
-                    with interests in GANs and NLPs.</h1><br>
+                    <h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in data analysis and developing ML/DL models.</h1><br>
                 </div>
             </header>
 
