--- a/blog1.html
+++ b/blog1.html
@@ -15,9 +15,8 @@
         <!-- Header -->
             <header id="header">
                 <div class="inner">
-                    <img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
-                    <h1><strong>I am Anitya Gangurde</strong>, a self-taught pythonista and a ML Enthusiast<br />
-					with interest in data analysis and developing ML/DL models.</h1><br>
+                    <a href="index.html"><img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" /></a>
+		    <h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in data analysis and developing ML/DL models.</h1><br>
                 </div>
             </header>
 
