--- a/aiml.html
+++ b/aiml.html
@@ -15,7 +15,7 @@
         <!-- Header -->
             <header id="header">
                 <div class="inner">
-                    <img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" />
+                    <a href="index.html"><img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" /></a>
                     <h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in data analysis and developing ML/DL models.</h1><br>
                 </div>
             </header>
