--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,11 @@
                                 <ul class="labeled-icons">
                                     <li>
                                         <h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-                                        Citizen of the Internet but currently located in Nashik, Maharashtra, India
+                                        Nashik, MH, India
                                     </li>
                                     <li>
                                         <h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-                                        000-000-0000
+                                        (Kindly refer the resume.)
                                     </li>
                                     <li>
                                         <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
