--- a/aiml.html
+++ b/aiml.html
@@ -39,7 +39,7 @@
                             <article class="col-6 col-12-xsmall work-item">
                                 <a href="https://github.com/AnityaGan9urde/NEWS-Headline-Classifier-project"><img src="images/thumbs/newstm.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
                                 <h3>NEWS Article Segmentation</h3>
-                                <span class="label tag shadow">NLP</span><span class="label tag shadow">Flask</span><span class="label tag shadow">Python</span><span class="label deployed shadow">Deployed</span><br><br>
+                                <span class="label tag shadow">Deep Learning</span><span class="label tag shadow">Django</span><span class="label tag shadow">BERT</span><br><br>
                                 <p>This is an NLP project which classifies the news topics based on the user input(i.e. a news article in English). This is still a work in progress and close to finishing.</p>
                             </article>
                             <article class="col-6 col-12-xsmall work-item">
