--- a/analytics.html
+++ b/analytics.html
@@ -66,6 +66,12 @@
                                 <span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
                                 <p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
                             </article>
+				<article class="col-6 col-12-xsmall work-item">
+                                <a href="https://docs.google.com/spreadsheets/d/1xJM76Xp4vHclWspqK-IfnU35Qip6S9of1WUB0xaNYps/edit?usp=sharing"><img src="images/thumbs/sales.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+                                <h3>Increasing Sales and Analysis</h3>
+                                <span class="label tag shadow">MS-Excel</span><span class="label tag shadow">Google Sheets</span>
+                                <p>This Excel file showcases a case study done on Google Sheets to give out incentives to different managers based on sales and giving out strategies for increasing the sales next month.</p>
+                            </article>
                         </div>
                         <div>
                             <a href="Anitya_Gangurde_Resume_da.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
