--- a/analytics.html
+++ b/analytics.html
@@ -74,7 +74,7 @@
                             </article>
                         </div>
                         <div>
-                            <a href="Anitya_Gangurde_Resume_da.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
+                            <a href="Anitya_Gangurde_da.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
                         </div>
                     </section>
                 </div>
