--- a/aiml.html
+++ b/aiml.html
@@ -40,7 +40,7 @@
                                 <a href="https://github.com/AnityaGan9urde/NEWS-Headline-Classifier-project"><img src="images/thumbs/newstm.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
                                 <h3>NEWS Article Segmentation</h3>
                                 <span class="label tag shadow">Deep Learning</span><span class="label tag shadow">Django</span><span class="label tag shadow">BERT</span><br><br>
-                                <p>This is an *NLP* project which classifies news headlines into 40 topics using a *BERT* model. For interaction with the model, I have created a *Django* app which takes in news headline and gives topic predictions with their probability. User can further save the input and the prediction to a local database using *MySQL*.</p>
+                                <p>This is an NLP project which classifies news headlines into 40 topics using a BERT model wrapped into a Django app for user interaction. User can further save the input and the prediction to a local database using MySQL.</p>
                             </article>
                             <article class="col-6 col-12-xsmall work-item">
                                 <a href="https://github.com/AnityaGan9urde/Guitar-chord-detection"><img src="images/thumbs/guitar.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
