--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html"><img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in data analysis and developing ML/DL models.</h1><br>
+					<h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in writing and developing ML/DL apps.</h1><br>
+					<h1><a>Currently Working</a>: Product Management (ML) intern at Revca</h1>
 				</div>
 			</header>
 
@@ -41,6 +42,11 @@
 						</header>
 						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
 					</section>
+<!-- 					<section id="working">
+						<header class="">
+							<h2>Currently Working</h2>
+						</header>
+					</section> -->
 					<section class="hacker-badges" id="badges">
 						<header class="section-card-header">
 							<svg viewBox="0 0 24 24" width="1.5em" height="1.5em" class="section-card-icon ui-svg-icon" fill="currentColor"><path d="M12 15.7c-4.1 0-7.4-3.3-7.4-7.4C4.6 4.3 7.9 1 12 1s7.4 3.3 7.4 7.4c0 4-3.3 7.3-7.4 7.3zM12 3C9 3 6.6 5.4 6.6 8.4c0 3 2.4 5.4 5.4 5.4 3 0 5.4-2.4 5.4-5.4C17.4 5.4 15 3 12 3z"></path><path d="M16.5 23c-.2 0-.4 0-.5-.1l-4-2.4-4 2.4c-.3.2-.7.2-1.1 0-.3-.2-.5-.6-.4-1l1.1-8.3c.1-.5.6-.9 1.1-.9.5.1.9.6.9 1.1L8.8 20l2.8-1.7c.3-.2.7-.2 1 0l2.8 1.7-.8-6.2c-.1-.5.3-1.1.9-1.1.6-.1 1.1.3 1.1.9l1.1 8.3c.1.4-.1.8-.4 1-.4 0-.6.1-.8.1z"></path></svg>
