--- a/analytics.html
+++ b/analytics.html
@@ -16,7 +16,7 @@
             <header id="header">
                 <div class="inner">
                     <a href="index.html"><img class="image avatar hover-shadow zoom" src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in data analysis and developing ML/DL models.</h1><br>
+					<h1><strong>I am Anitya Gangurde, </strong>a self-taught pythonista and an ML Enthusiast with interests in writing and developing ML/DL apps.</h1><br>
                 </div>
             </header>
 
