--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					  	<a href="analytics.html">Analytics</a>
 					  	<a href="blogs.html">Blogs</a>
 					  	<a href="certifications.html">Certifications</a>
-					  	<a href="contact.html">Contact</a>
+					  	<a href="contact.html" class="button button-shadow button-zoom">Get In Touch</a>
 					</div>
 				</header>
 				<!-- One -->
@@ -40,6 +40,7 @@
 							<h2>Welcome to my portfolio website where you can find all my recent projects and certifications.</h2>
 						</header>
 						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
+						<p>Education: <strong>Bachelors in Mechanical Engineering, from MET's Institute of Engineering, Nashik</strong></p>
 						<p>Currently working as: <strong>Product Management (Machine Learning) Intern at Revca</strong></p>
 					</section>
 					<section class="hacker-badges" id="badges">
