--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					  	<a href="analytics.html">Analytics</a>
 					  	<a href="blogs.html">Blogs</a>
 					  	<a href="certifications.html">Certifications</a>
-					  	<a href="contact.html" class="button button-shadow button-zoom">Get In Touch</a>
+					  	<a href="contact.html">Get In Touch</a>
 					</div>
 				</header>
 				<!-- One -->
