--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                         <a href="analytics.html">Analytics</a>
                         <a href="blogs.html">Blogs</a>
                         <a href="certifications.html">Certifications</a>
-                        <a class="active" href="contact.html">Contact</a>
+                        <a class="active" href="contact.html">Get In Touch</a>
                     </div>
 
                     <section>
