--- a/blog2.html
+++ b/blog2.html
@@ -30,7 +30,7 @@
                         <a href="analytics.html">Analytics</a>
                         <a class="active" href="blogs.html">Blogs</a>
                         <a href="certifications.html">Certifications</a>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Get In Touch</a>
                     </div>
                     <section id="three">
                         <div>
