--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</header>
 						<p>Hello, I am Anitya. I like working with computers and using them to solve complex problems. That's why the field of Data Science is of particular interest to me as it combines both of these things, computers and critical problem-solving. Currently, I am still learning and understanding how all parts of data science come into play in the real world.</p>
 						<p>Education: <strong>Bachelors in Mechanical Engineering, from MET's Institute of Engineering, Nashik</strong></p>
-						<p>Currently working as: <strong>Product Management (Machine Learning) Intern at Revca</strong></p>
+						<p>Currently working as: <strong>Asso. Technical Product Manager (Machine Learning) at Revca</strong></p>
 					</section>
 					<section class="hacker-badges" id="badges">
 						<header class="section-card-header">
