--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 						</div></a></li>
 						
 						<li><br><br><img class="zoom images" src="https://www.codewars.com/users/AGans01/badges/large"></li>
+						<li><br><p><img alt="Progression Tier" src="/static/images/tiers/expert@192.png" height="92px" width="92px"></p><br><p color="purple">Discussion Expert</p></li>
 						</ul>
 					</section>
 					<section class="hacker-badges">
