--- a/index.html
+++ b/index.html
@@ -128,6 +128,59 @@
 							▶️ <strong>Work ethics 👷‍♂️</strong>| Figure out • Work hard and smart • Perfectionism<br /></p>
 						</div>
 					</section>
+					<section id="aiml">
+						<h2>Machine Learning Projects</h2>
+						<div class="row">
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/NEWS-Headline-Classifier-project"><img src="images/thumbs/newstm.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>NEWS Article Segmentation</h3>
+							<span class="label tag shadow">Deep Learning</span><span class="label tag shadow">Django</span><span class="label tag shadow">BERT</span><br><br>
+							<p>This is an NLP project which classifies news headlines into 40 topics using a BERT model wrapped into a Django app for user interaction. User can further save the input and the prediction to a local database using MySQL.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/Guitar-chord-detection"><img src="images/thumbs/guitar.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>Guitar Chord Detection API</h3>
+							<span class="label tag shadow">Python</span><span class="label tag shadow">Librosa</span><span class="label tag shadow">Django</span><span class="label deployed shadow">In Progress</span><br><br>
+							<p>This project involves a Django app which detects guitar chords while live playing. This is still a work in progress.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://would-you-survive-titanic-2.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<a href="https://github.com/AnityaGan9urde/would-you-survive-titanic-2.0"><h3>Would You Survive the Titanic disaster [Version 2.0]</h3></a>
+							<span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label tag shadow">Scikit-Learn</span><span class="label deployed shadow">Deployed</span><br><br>
+							<p>Continuing the work of a previous Flask project, here I trained multiple models and included multiple features to get more accurate predictions.
+							    The models takes more number of features and gives a prediction.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/ResNet34-on-Fishes"><img src="images/thumbs/fish.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>Using ResNet34 on Fish Dataset</h3>
+							<span class="label tag shadow">ResNet-34</span><span class="label tag shadow">PyTorch</span><span class="label notebook shadow">Notebook</span><br><br>
+							<p>In this project, I used a pretrained ResNet34 model to train the Fish Dataset on, which was taken from Kaggle.
+							    I achieved an accuracy of 99.70% within around 8 minutes.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/Bank-Customer-Analysis-and-Churn-Prediction"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>Banking Customer Churn Rate</h3>
+							<span class="label tag shadow">Pandas</span><span class="label tag shadow">Matplotlib</span><span class="label tag shadow">Seaborn</span><span class="label notebook shadow">Notebook</span><br><br>
+							<p>Banking Customer Churn Rate is a project in which the model determines whether customers will leave the bank given certain information about them.
+							    I trained an XGBoost model on this customer dataset using <b>cross-validation</b> and <b>hyper-tuned</b> it to achieve an accuracy of 85.4% as compared to 81% and 75% on normal <b>XGBoost</b> model and <b>Logistic Regression</b> respectively.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://hr-analytics-will-someone-quit.herokuapp.com/"><img src="images/thumbs/hr1.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<a href="https://github.com/AnityaGan9urde/HR-Analytics-Will-someone-quit"><h3>HR Analytics: Predict whether someone will quit</h3></a>
+							<span class="label tag">Python</span><span class="label tag shadow">Flask</span><span class="label tag shadow">SVM</span><span class="label deployed shadow">Deploy</span><span class="label deployed shadow">GitHub</span><br><br>
+							<p>This is a Flask api deployed on Heroku that uses Support Vector Machines with RBF to determine if someone will quit a job provided various information about that employee. I achieved an accuracy of around 77% during training for this model.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://would-you-survive-the-titanic.herokuapp.com/"><img src="images/thumbs/titanic.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<a href="https://github.com/AnityaGan9urde/Would-You-Survive-Titanic"><h3>Would You Survive the Titanic disaster?</h3></a>
+							<span class="label tag shadow">Python</span><span class="label tag shadow">Flask</span><span class="label deployed shadow">Deployed</span><br><br>
+							<p>The project is a Machine Learning api, deployed on Heroku, which implements Logistic Regression to predict whether you would survive the Titanic disaster. The api is made with Flask using python. The project includes a model to predict the survival given three inputs.</p>
+						    </article>
+						</div>
+						<div>
+						    <a href="Anitya_Gangurde_ml.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
+						</div>
+
 
 		<!-- Footer -->
 			<footer id="footer">
