--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 							</div>
 						</div></a></li>
 						
-						<li><br><br><img class="zoom images" src="https://www.codewars.com/users/AGans01/badges/large"></li>
-						<li><br><p><img alt="Progression Tier" src="/static/images/tiers/expert@192.png" height="92px" width="92px"></p><br><p color="purple">Discussion Expert</p></li>
+						<li><br><br><img class="zoom images" src="https://www.codewars.com/users/AGans01/badges/large"></li><br>
+						<div class="content-box__title-bar"><div class="sc-kfWwvt jVWCOO" style="line-height: 18px;"><span role="button" class="achievement-summary__title achievement-summary__title--link">notebooks<span><br>expert</span></span></div><div class="content-box__right-side"><img role="presentation" alt="expert" src="/static/images/tiers/expert@48.png" title="expert" height="30" width="30"></div></div>
 						</ul>
 					</section>
 					<section class="hacker-badges">
@@ -180,6 +180,131 @@
 						<div>
 						    <a href="Anitya_Gangurde_ml.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
 						</div>
+					</section>
+					<section id="analytics">
+						<h2>Data Analysis Projects</h2>
+						<div class="row">
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/Covid-19-Analysis"><img src="images/thumbs/covid.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>Covid-19 Analysis</h3>
+							<span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
+							<p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/CO2-Emissions-Analysis"><img src="images/thumbs/CO2.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>CO2 emissions all around the world</h3>
+							<span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
+							<p>This project involves an analysis on World CO2 emissions from 1960 to 2011.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/Bank-Customer-Analysis-and-Churn-Prediction"><img src="images/thumbs/bank.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>Banking Customer Churn Rate</h3>
+							<span class="label tag shadow">Pandas</span><span class="label tag shadow">Matplotlib</span><span class="label tag shadow">Seaborn</span><span class="label notebook shadow">Jupyter Notebook</span><br><br>
+							<p>Here, I performed extensive data cleaning and data wrangling tasks using Pandas. Did Exploratory Data Analysis using Matplolib and Seaborn to create charts and analyze the data in a Jupyter Notebook.
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/Census-2011-Analysis"><img src="images/thumbs/census.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>Census-2011 Analysis</h3>
+							<span class="label tag shadow">MySQL</span><span class="label tag shadow">MS-Excel</span><span class="label deployed shadow">DashBoard</span><br><br>
+							<p>This project involves an analysis using <b>SQL</b> and <b>MS-Excel</b> on Census data of India for the year 2011.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="https://github.com/AnityaGan9urde/g20-countries-analysis"><img src="images/thumbs/g20.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>G20 Countries Analysis</h3>
+							<span class="label tag shadow">Pandas</span><span class="label tag shadow">Tableau</span><span class="label tag shadow">MS-Excel</span><span class="label notebook shadow">Jupyter Notebook</span><span class="label deployed shadow">DashBoard</span><br><br>
+							<p>This project involves manipulating dataset on <b>Excel</b> and creating <b>Tableau</b> dashboards for the same.</p>
+						    </article>
+							<article class="col-6 col-12-xsmall work-item">
+							<a href="https://docs.google.com/spreadsheets/d/1xJM76Xp4vHclWspqK-IfnU35Qip6S9of1WUB0xaNYps/edit?usp=sharing"><img src="images/thumbs/sales.jpg" class="image fit zoom deploy hover-shadow" alt="" /></a>
+							<h3>Increasing Sales and Analysis</h3>
+							<span class="label tag shadow">MS-Excel</span><span class="label tag shadow">Google Sheets</span>
+							<p>This Excel file showcases a case study done on Google Sheets to give out incentives to different managers based on sales and giving out strategies for increasing the sales next month.</p>
+						    </article>
+						</div>
+						<div>
+						    <a href="Anitya_Gangurde_da.pdf" class="button button-shadow button-zoom" download>Download Resume For This</a>
+						</div>
+				    	</section>
+					<section id="blogs">
+						<h2>Recent Blogs</h2>
+						<div class="row">
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="blog1.html" class="image fit zoom read hover-shadow"><img src="images/fulls/blog1.jpg" alt="" /></a>
+							<h3>How to approach any Data Science problem?</h3>
+							<span class="label tag shadow">Machine Learning</span><span class="label article shadow">Blog</span>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<a href="blog2.html" class="image fit zoom read hover-shadow"><img src="images/fulls/blog2.jpg" alt="" /></a>
+							<h3>How confusion matrices are useful in Machine Leaning?</h3>
+							<span class="label tag shadow">Machine Learning</span><span class="label tag shadow">Statistics</span><span class="label article shadow">Blog</span>
+						    </article>
+						</div>
+						<ul class="actions">
+						    <li><a href="https://anityagan9urde.medium.com/" class="button button-shadow button-zoom">View More On Medium</a></li>
+						</ul>
+					</section>
+					<section id="certifications">
+						<h2>Certifications</h2>
+						<div class="row">
+						    <article class="col-6 col-12-xsmall work-item">
+							<img id="myImg" src="images/certs/sql_i.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(6)" />
+							<a href="https://www.hackerrank.com/certificates/1b00188d4baa"><h3>SQL(Intermediate)</h3></a>
+							<p>Skill verification certificate from HackerRank.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<img src="images/certs/02gans.jpg" class="image fit thumb zoom hover-shadow cursor" alt="PyTorch" onclick="openModal();currentSlide(1)" />
+							<a href="https://jovian.ai/certificate/MFQTKMZUGE"><h3>Deep Learning with Pytorch: Zero to GANs</h3></a>
+							<p>Certification for Deep Learning course using PyTorch framework with practical assignments and course projects.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<img src="images/certs/int2nlp.jpg" class="image fit thumb zoom hover-shadow cursor" alt="NLP" onclick="openModal();currentSlide(2)" />
+							<a href="https://courses.analyticsvidhya.com/certificates/31l9lbjcex"><h3>Introduction to Natural Language Processing</h3></a>
+							<p>Certification for an NLP course introducing to basic concepts of NLP with a Twitter hate speech detection project.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<img id="myImg" src="images/certs/pymlbc.jpg" class="image fit thumb zoom hover-shadow cursor" alt="ML Bootcamp" onclick="openModal();currentSlide(3)" />
+							<a href="https://ude.my/UC-2b07f57c-87bd-4687-a766-c37171dd0e1a"><h3>Python for Data Science and ML Bootcamp</h3></a>
+							<p>Certification for a course which introduces to Python libraries such as Pandas, Numpy, Matplotlib and ML libraries such as Scikit-learn.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<img id="myImg" src="images/certs/pydev.jpg" class="image fit thumb zoom hover-shadow cursor" alt="Python" onclick="openModal();currentSlide(4)" />
+							<a href="https://ude.my/UC-76d210a8-8b02-4af3-90c8-5f2349d537aa"><h3>Complete Python Developer in 2020</h3></a>
+							<p>Certification for understanding basic to intermediate concepts of the Python language.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<img id="myImg" src="images/certs/py.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(5)" />
+							<a href="https://www.hackerrank.com/certificates/c42384242efe"><h3>Python(Basics)</h3></a>
+							<p>Skill verification certificate from HackerRank.</p>
+						    </article>
+						    <article class="col-6 col-12-xsmall work-item">
+							<img id="myImg" src="images/certs/sql.jpg" class="image fit thumb zoom hover-shadow cursor" alt="" onclick="openModal();currentSlide(6)" />
+							<a href="https://www.hackerrank.com/certificates/6bacf2a99123"><h3>SQL(Basics)</h3></a>
+							<p>Skill verification certificate from HackerRank.</p>
+						    </article>
+						</div>
+				    	</section>
+					<section id="contact">
+						<h2>Get In Touch</h2>
+						<div class="row">
+						    <div>
+							<ul class="labeled-icons">
+							    <li>
+								<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+								Nashik, MH, India
+							    </li>
+							    <li>
+								<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
+								(Kindly refer the resume.)
+							    </li>
+							    <li>
+								<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+								<a href="mailto:anityagangurde01@gmail.com">anityagangurde01@gmail.com</a>
+							    </li>
+							</ul>
+						    </div>
+						</div>
+				    	</section>
+
 
 
 		<!-- Footer -->
